"""
SVA Project Progress Tracker
Track progress toward PROJECT_OVERVIEW.md objectives
"""

import json
from datetime import datetime
from pathlib import Path

class SVAProgressTracker:
    """Track SVA project development progress"""
    
    def __init__(self):
        self.project_objectives = {
            "local_ai_video_analysis": {
                "status": "IN_PROGRESS",
                "progress": 85,
                "components": {
                    "video_upload": {"status": "IN_PROGRESS", "progress": 30},
                    "audio_transcription": {"status": "WORKING", "progress": 95},
                    "vision_analysis": {"status": "WORKING", "progress": 95}, 
                    "report_generation": {"status": "WORKING", "progress": 85},
                    "natural_language_queries": {"status": "WORKING", "progress": 80}
                }
            },
            "mcp_server_architecture": {
                "status": "WORKING", 
                "progress": 93,
                "components": {
                    "transcription_mcp": {"status": "WORKING", "progress": 95},
                    "vision_mcp": {"status": "WORKING", "progress": 95},
                    "generation_mcp": {"status": "WORKING", "progress": 90},
                    "router_mcp": {"status": "WORKING", "progress": 90}
                }
            },
            "offline_operation": {
                "status": "WORKING",
                "progress": 89,
                "components": {
                    "local_models": {"status": "WORKING", "progress": 85},
                    "no_cloud_dependencies": {"status": "WORKING", "progress": 95},
                    "network_isolation_test": {"status": "WORKING", "progress": 80},
                    "self_developed_mcp": {"status": "WORKING", "progress": 95}
                }
            },
            "frontend_development": {
                "status": "PENDING",
                "progress": 0,
                "components": {
                    "react_setup": {"status": "PENDING", "progress": 0},
                    "tauri_integration": {"status": "PENDING", "progress": 0},
                    "chat_ui": {"status": "PENDING", "progress": 0},
                    "grpc_client": {"status": "PENDING", "progress": 0}
                }
            },
            "natural_language_processing": {
                "status": "WORKING",
                "progress": 81,
                "components": {
                    "query_understanding": {"status": "WORKING", "progress": 85},
                    "multi_agent_routing": {"status": "WORKING", "progress": 90},
                    "human_in_the_loop": {"status": "WORKING", "progress": 70},
                    "example_queries": {"status": "WORKING", "progress": 95}
                }
            }
        }
        
        # Current achievements
        self.achievements = [
            "✅ Whisper integration working with Malay language support",
            "✅ Multiple model testing (tiny, base, small)",
            "✅ Enhanced transcription with confidence scoring", 
            "✅ MCP server architecture implemented for transcription",
            "✅ Audio quality analysis working",
            "✅ Language detection with confidence scores",
            "✅ Word-level timestamps extraction",
            "✅ Local AI models running offline",
            "✅ YOLO object detection integrated and working",
            "✅ EasyOCR text extraction from video frames",
            "✅ Vision MCP Server with scene analysis",
            "✅ Router MCP Server coordinating multiple agents",
            "✅ Natural language query intent recognition",
            "✅ Multi-modal analysis (combining audio + visual)",
            "✅ Human-in-the-loop clarification system",
            "✅ Generation MCP Server - PDF and PowerPoint creation",
            "✅ Enhanced chart and graph detection capabilities",
            "✅ Document structure analysis (headers, tables, lists)",
            "✅ Network isolation testing implemented",
            "✅ All four core MCP servers completed and tested"
        ]
        
        # Next immediate tasks
        self.next_tasks = [
            "🎯 Start Frontend React + Tauri setup",
            "🎯 Add gRPC API for frontend communication", 
            "🎯 Implement chat UI for natural language queries",
            "🎯 Add video upload and processing interface",
            "🎯 Create user dashboard for analysis results",
            "🎯 Implement real-time processing feedback",
            "🎯 Add report export and sharing features",
            "🎯 Complete network isolation verification",
            "🎯 Package application for distribution"
        ]
        
    def display_progress(self):
        """Display comprehensive progress report"""
        print("📊 SVA PROJECT PROGRESS REPORT")
        print("=" * 60)
        print(f"🕒 Generated: {datetime.now().strftime('%Y-%m-%d %H:%M:%S')}")
        print()
        
        # Overall progress
        total_progress = self._calculate_overall_progress()
        print(f"🎯 OVERALL PROJECT PROGRESS: {total_progress:.1f}%")
        print(self._create_progress_bar(total_progress))
        print()
        
        # Detailed breakdown
        print("📋 DETAILED BREAKDOWN:")
        print("-" * 40)
        
        for objective, details in self.project_objectives.items():
            status_icon = self._get_status_icon(details["status"])
            progress = details["progress"]
            
            print(f"\n{status_icon} {objective.upper().replace('_', ' ')}")
            print(f"   Progress: {progress}% {self._create_progress_bar(progress, width=30)}")
            print(f"   Status: {details['status']}")
            
            # Component breakdown
            for component, comp_details in details["components"].items():
                comp_icon = self._get_status_icon(comp_details["status"])
                comp_progress = comp_details["progress"]
                print(f"     {comp_icon} {component.replace('_', ' ')}: {comp_progress}%")
        
        print("\n" + "=" * 60)
        
        # Achievements
        print("\n🏆 CURRENT ACHIEVEMENTS:")
        for achievement in self.achievements:
            print(f"   {achievement}")
        
        # Next tasks
        print("\n📋 NEXT IMMEDIATE TASKS:")
        for task in self.next_tasks:
            print(f"   {task}")
        
        # Recommendations
        print("\n💡 RECOMMENDATIONS:")
        self._show_recommendations()
        
    def _calculate_overall_progress(self) -> float:
        """Calculate weighted overall progress"""
        weights = {
            "local_ai_video_analysis": 0.3,
            "mcp_server_architecture": 0.25,
            "offline_operation": 0.2,
            "frontend_development": 0.15,
            "natural_language_processing": 0.1
        }
        
        total_weighted = 0
        for objective, weight in weights.items():
            progress = self.project_objectives[objective]["progress"]
            total_weighted += progress * weight
            
        return total_weighted
    
    def _get_status_icon(self, status: str) -> str:
        """Get appropriate icon for status"""
        icons = {
            "WORKING": "✅",
            "IN_PROGRESS": "🔄", 
            "PENDING": "⭕",
            "PARTIAL": "🟡",
            "DESIGN": "📐",
            "TESTING": "🧪"
        }
        return icons.get(status, "❓")
    
    def _create_progress_bar(self, progress: float, width: int = 20) -> str:
        """Create a visual progress bar"""
        filled = int(width * progress / 100)
        empty = width - filled
        return f"[{'█' * filled}{'░' * empty}]"
    
    def _show_recommendations(self):
        """Show specific recommendations based on current progress"""
        recommendations = []
        
        # Check transcription status
        if self.project_objectives["mcp_server_architecture"]["components"]["transcription_mcp"]["progress"] >= 80:
            recommendations.append("🚀 Transcription MCP is ready - proceed to Vision MCP Server")
        
        # Check offline operation
        if self.project_objectives["offline_operation"]["progress"] >= 70:
            recommendations.append("🔒 Run network isolation test to verify complete offline operation")
        
        # Check overall progress
        overall = self._calculate_overall_progress()
        if overall >= 50:
            recommendations.append("🎨 Start frontend development with React + Tauri")
        elif overall >= 30:
            recommendations.append("🤖 Focus on completing MCP server architecture")
        else:
            recommendations.append("🔧 Continue building core AI capabilities")
        
        for rec in recommendations:
            print(f"   {rec}")
    
    def save_progress_report(self, filename: str = "sva_progress_report.json"):
        """Save progress report to JSON file"""
        report = {
            "timestamp": datetime.now().isoformat(),
            "overall_progress": self._calculate_overall_progress(),
            "objectives": self.project_objectives,
            "achievements": self.achievements,
            "next_tasks": self.next_tasks
        }
        
        with open(filename, 'w', encoding='utf-8') as f:
            json.dump(report, f, indent=2, ensure_ascii=False)
        
        print(f"\n💾 Progress report saved to {filename}")

def test_current_capabilities():
    """Test what's currently working"""
    print("\n🧪 TESTING CURRENT CAPABILITIES")
    print("=" * 40)
    
    # Test 1: Check if transcription files exist
    transcription_files = [
        "transcription_result.txt",
        "transcription_small_auto-detect_language.json",
        "backend/mcp_servers/transcription_server.py"
    ]
    
    print("📁 File Check:")
    for file_path in transcription_files:
        if Path(file_path).exists():
            print(f"   ✅ {file_path}")
        else:
            print(f"   ❌ {file_path}")
    
    # Test 2: Check video file
    video_path = Path("data/videos/test_video.mp4")
    if video_path.exists():
        size_mb = video_path.stat().st_size / (1024 * 1024)
        print(f"   ✅ Test video: {size_mb:.1f}MB")
    else:
        print("   ❌ Test video not found")
    
    # Test 3: Check dependencies
    print("\n📦 Dependency Check:")
    try:
        import whisper
        print("   ✅ Whisper available")
    except ImportError:
        print("   ❌ Whisper not available")
    
    try:
        import cv2
        print("   ✅ OpenCV available")
    except ImportError:
        print("   ❌ OpenCV not available")
    
    try:
        import torch
        print("   ✅ PyTorch available")
    except ImportError:
        print("   ❌ PyTorch not available")

if __name__ == "__main__":
    # Test current capabilities
    test_current_capabilities()
    
    # Show progress report
    tracker = SVAProgressTracker()
    tracker.display_progress()
    
    # Save report
    tracker.save_progress_report()